# pagecraft

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  catalog.json  index.html  m28p.html  pyproject.toml  viewer.html
.claude/agents/: pagecraft-architect.md  pagecraft-designer.md  pagecraft-evaluator.md
.impeccable/: design.json
.omx/context/: m28p-correction-plan-20260427T222713Z.md
.omx/plans/: prd-m28p-main-pages-corrections.md  test-spec-m28p-main-pages-corrections.md
.omx/reports/: m28p-audit.json  m28p-audit.md  m28p-http-evidence.json  m28p-js-syntax-evidence.json  m28p-repair-manifest.json
activities/2026-03-17-dobro-ate-10/: docspec.json  index.html  meta.json  teacher.md
activities/3ano-pesquisa-vs-ia-prompts/: docspec.json  index.html  meta.json  teacher.md
activities/arvore-cacador-silabas/: design-spec.json  docspec.json  index.html  meta.json  proofread-v1.json  (+1 more)
docs/: m28p.md
scripts/: audit_m28p_alignment.py  generate_m28p_pages.py  generate_m28p_variants.py  inject_bridge_lite.py  m28p_page_variants.json  repair_m28p_main_pages.py  validate_m28p_pages.py
server/: app.py  bridge_snippet.py  config.py  config.toml.example  events.py  markdown_export.py  publish.py  security.py  storage.py
skills/: sync-from-canonical.sh
tests/: test_api_integration.py  test_bridge_snippet.py  test_catalog.py  test_classroom.py  test_events.py  test_feedback.py  test_knowledge.py  test_markdown_export.py  test_providers.py  test_publish.py  test_reports.py  test_runner.py  test_schemas.py  test_storage.py  test_validators.py
(+918 files in other folders)
